examples/test/testpolicy12227.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12227
  namespace: namespace227
spec:
  podSelector:
    matchLabels:
      key42: value29
      key0: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value27
          key4: value31
      podSelector:
        matchLabels:
          key44: value1
          key3: value10
